--- a/arrow/index.html
+++ b/arrow/index.html
@@ -6,7 +6,7 @@
             if (window.innerHeight > window.innerWidth) {
                 let meta = document.createElement('meta')
                 meta.name = 'viewport'
-                content = 'height=device-width'
+                meta.content = 'height=device-width'
                 document.head.appendChild(meta)
             }
         </script>
