--- a/arrow/index.html
+++ b/arrow/index.html
@@ -48,12 +48,13 @@
                         transition: linear .3s top, linear .3s left, linear .3s background-color;
                     }
 
-                        body[mobile="true"] .num {
-                            width: 17.5vw;
-                            height: 17.5vw;
-                            border-radius: 1.2vw;
-                            line-height: 17.5vw;
-                        }
+                    body[mobile="true"] .num {
+                        width: 17.5vw;
+                        height: 17.5vw;
+                        border-radius: 1.2vw;
+                        line-height: 17.5vw;
+                        transition: linear .1s top, linear .1s left, linear .1s background-color;
+                    }
 
                         .num[y="1"] {
                             top: 2vh;
