--- a/graphReact/index.html
+++ b/graphReact/index.html
@@ -1,433 +1,1 @@
-<style>
-    body {
-        margin: 0 auto;
-    }
-
-    .Node {
-        position: absolute;
-        z-index: 1;
-        top: 0;
-        left: 0;
-        height: 27px;
-        width: 27px;
-        border: 0;
-        border-radius: 50%;
-        line-height: 2px;
-        font-size: 13px;
-        font-family: monospace;
-        color: rgb(120, 120, 120);
-        background-color: rgb(230, 230, 230);
-        outline: none;
-        user-select: none;
-        cursor: pointer;
-    }
-
-    .Edge {
-        position: absolute;
-        z-index: 0;
-        top: 0;
-        left: 0;
-        width: 4px;
-        background-color: rgb(200, 200, 200);
-        transform-origin: 0 0 0;
-    }
-
-    #crosshairVert {
-        position: absolute;
-        z-index: 0;
-        top: 0;
-        background-color: rgb(10, 210, 150);
-        width: 1.5px;
-        height: 100%;
-    }
-
-    #crosshairHorizontal {
-        position: absolute;
-        z-index: 0;
-        left: 0;
-        background-color: rgb(10, 210, 150);
-        height: 1.5px;
-        width: 100%;
-    }
-
-    #edge_bar {
-        position: absolute;
-        z-index: 2;
-        width: 120px;
-        height: 90px;
-        box-sizing: border-box;
-        padding-top: 8px;
-        border-radius: 5px;
-        background-color: rgba(180, 180, 180, .2);
-        user-select: none;
-        overflow: hidden;
-    }
-
-        #edge_bar input {
-            float: left;
-            width: 34px;
-            height: 34px;
-            margin-bottom: 8px;
-            border: solid 0.1px rgb(255, 255, 255);
-            border-radius: 50%;
-            outline: none;
-            text-align: center;
-            font: 16px/34px sans-serif;
-            transition: border .25s ease-in-out;
-            color: rgb(120, 120, 120);
-        }
-
-        #edge_bar input:focus {
-            border: solid 1.5px rgb(180, 180, 180);
-        }
-
-        #edge_bar input::placeholder {
-            color: rgb(180, 180, 180);
-        }
-
-        #edge_bar input:nth-child(1) {
-            margin-left: 10px;
-        }
-
-        #edge_bar div {
-            float: left;
-            height: 20px;
-            width: 20px;
-            background-color: rgba(180, 180, 180, .5);
-            margin: 7px 6px;
-            border-radius: 50%;
-            color: white;
-            text-align: center;
-            font: 20px/20px serif;
-        }
-
-        #edge_bar button {
-            width: 100%;
-            height: 40px;
-            border: solid 2px rgb(10, 210, 150);
-            background-color: rgb(10, 210, 150);
-            transition: border .5s ease-in-out, background-color .5s ease-in-out;
-            outline: none;
-            font: 15px/32px sans-serif;
-            color: white;
-        }
-
-        #edge_bar button:hover {
-            border: solid 2px rgb(10, 190, 150);
-            background-color: rgb(10, 190, 150);
-        }
-
-    #copyright {
-        z-index: -1;
-        position: absolute;
-        left: calc(50% - 50px);
-        bottom: 10px;
-        color: rgb(120, 120, 120);
-        height: 20px;
-        width: 100px;
-        text-align: center;
-        font: 12px/20px Arial;
-        user-select: none;
-    }
-</style>
-
-<div id="graph_container"></div>
-<div id="edge_bar_container"></div>
-<div id="copyright">Graph &copy; Artem</div>
-
-<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-
-<script type="text/babel">
-    class Graph extends React.Component {
-        constructor(props) {
-            super(props);
-            this.state = {
-                'nodes': [],
-                'edges': [],
-                'crosshair': {
-                    'enable': true,
-                    'display': false,
-                    'top': 0,
-                    'left': 0
-                }
-            }
-        }
-
-        addNode(position = [0, 0]) {
-            this.state.nodes.push({
-                left: position[0] > 0? position[0] : 0,
-                top: position[1] > 0? position[1] : 0
-            })
-            this.setState({nodes: this.state.nodes});
-        } 
-
-        addEdge(v1, v2) {
-            if (this.state.nodes[v1] && this.state.nodes[v2] && v1 != v2) {
-                this.state.edges.push([v1, v2])
-                this.setState({edges: this.state.edges});
-                return 'success';
-            }
-
-            throw 'Саша ИЗВИНИ';
-        }
-
-        nodeUpdate = (index, newPosition) => {
-            this.state.nodes[index] = {
-                left: newPosition[0],
-                top: newPosition[1],
-            }
-
-            this.state.crosshair.left = newPosition[0];
-            this.state.crosshair.top = newPosition[1];
-
-            this.setState({nodes: this.state.nodes, crosshair: this.state.crosshair});
-        }
-
-        nodeDelete = (index) => {
-            this.state.edges.forEach((edge, indexEdge) => {
-                if (edge[0] == index || edge[1] == index)
-                    this.state.edges[indexEdge] = null;
-            })
-
-            let i = 0
-            while (i < this.state.edges.length) {
-                if (this.state.edges[i] == null) this.state.edges.splice(i, 1); else i++;
-            }
-
-            this.state.nodes[index] = null;
-            this.setState({edges: this.state.edges, nodes: this.state.nodes});
-        }
-
-        edgeDelete = (index) => {
-            this.state.edges.splice(index, 1);
-            this.setState({edges: this.state.edges});
-        }
-
-        crosshair = (state, x, y) => {
-            if (x) this.state.crosshair.left = x;
-            if (y) this.state.crosshair.top = y;
-            this.state.crosshair.display = state;
-
-            this.setState({crosshair: this.state.crosshair});
-        }
-
-        render() {
-            return (
-                <div>
-                    <div id={this.props.DOMElement['Nodes']}>
-                        {this.state.nodes.map((node, index) => {
-                            return node? <Node
-                                key={index} 
-                                index={index} 
-                                nodes={this.state.nodes} 
-                                update={this.nodeUpdate} 
-                                delete={this.nodeDelete}
-                                crosshair={this.crosshair}
-                            /> : null;
-                        })}
-                    </div>
-                    <div id={this.props.DOMElement['Edges']}>
-                        {this.state.edges.map((edge, index) => <Edge
-                            key={index} 
-                            index={index} 
-                            delete={this.edgeDelete}
-                            v1={this.state.nodes[edge[0]]} 
-                            v2={this.state.nodes[edge[1]]}
-                        />)}
-                    </div>
-                    {this.state.crosshair.enable && this.state.crosshair.display? <Crosshair
-                        left={this.state.crosshair.left}
-                        top={this.state.crosshair.top}
-                    /> : null}
-                </div>
-            )
-        }
-    }
-
-//=================================================================================
-//=================================================================================
-
-    class Node extends React.Component {
-        constructor(props) {
-            super(props);
-        }
-
-        drag = (e) => {
-            this.props.crosshair(true, this.props.nodes[this.props.index].left, this.props.nodes[this.props.index].top);
-
-            const block = [
-                e.pageX - e.target.offsetLeft,
-                e.pageY - e.target.offsetTop
-            ];
-
-            document.onmousemove = (e) => {
-                const pos = [e.pageX - block[0], e.pageY - block[1]];
-                this.props.update(this.props.index, [pos[0] > 0? pos[0] : 0, pos[1] > 0? pos[1] : 0]);
-            }
-
-            document.onmouseup = (e) => {
-                this.props.crosshair(false);
-                document.onmousemove = () => {}
-                document.onmouseup = () => {}
-            }
-        }
-        
-        render() {
-            return (
-                <button
-                    className='Node'
-                    style={{
-                        left: this.props.nodes[this.props.index].left,
-                        top: this.props.nodes[this.props.index].top
-                    }}
-                    onMouseDown={this.drag}
-                    onDoubleClick={() => this.props.delete(this.props.index)}
-                >
-                    {this.props.index}
-                </button> 
-            )
-        }
-    }
-
-//=================================================================================
-//=================================================================================
-
-    class Edge extends React.Component {
-        constructor(props) {
-            super(props);
-        }
-
-        render() {
-            let [v1, v2] = [this.props.v1, this.props.v2];
-            const [x, y] = [v1.left - v2.left, v1.top - v2.top];
-            let angle = Math.atan(y / x);
-            if (x >= 0) angle += Math.PI;
-            angle -= Math.PI / 2;
-
-            return (
-                <div
-                    className='Edge'
-                    style={{
-                        height: Math.sqrt(x*x + y*y),
-                        left: v1.left + 27 / 2 - 2 * Math.cos(angle),
-                        top: v1.top + 27 / 2 - 2 * Math.sin(angle),
-                        transform: `rotate(${angle}rad)`
-                    }}
-                    onDoubleClick={() => this.props.delete(this.props.index)}
-                />
-            )
-        }
-    }
-
-//=================================================================================
-//=================================================================================
-
-    class Crosshair extends React.Component {
-        constructor(props) {
-            super(props);
-        }
-
-        render() {
-            return (
-                <div>
-                    <div id="crosshairVert" style={{left: this.props.left + 27 / 2}}/>
-                    <div id="crosshairHorizontal" style={{top: this.props.top + 27 / 2}}/>
-                </div>
-            )
-        }
-    }
-
-//=================================================================================
-//=================================================================================
-
-    class EdgeBar extends React.Component {
-        constructor(props) {
-            super(props);
-            this.state = {
-                left: (document.body.clientWidth - 120) / 2,
-                top: 10,
-                v1: '',
-                v2: ''
-            }
-            this.v1 = React.createRef();
-            this.v2 = React.createRef();
-        }
-
-        drag = (e) => {
-            const block = [
-                document.querySelector('#edge_bar'),
-                e.pageX - document.querySelector('#edge_bar').offsetLeft,
-                e.pageY - document.querySelector('#edge_bar').offsetTop
-            ];
-
-            document.onmousemove = (e) => {
-                const pos = [e.pageX - block[1], e.pageY - block[2]];
-                this.setState({
-                    left: pos[0] > 0? pos[0] : 0,
-                    top: pos[1] > 0? pos[1] : 0
-                })
-            }
-
-            document.onmouseup = (e) => {
-                document.onmousemove = () => {}
-                document.onmouseup = () => {}
-            }
-        } 
-
-        focusOut = (e, index) => {
-            e.persist();
-
-            if (e.relatedTarget && e.relatedTarget.className == "Node") {
-                this.state[`v${index}`] = e.relatedTarget.innerText;
-                this.setState(this.state);
-            }
-        }
-
-        render() {
-            return (
-                <div onMouseDown={this.drag} id="edge_bar" style={{left: this.state.left, top: this.state.top}}>
-                    <input
-                        ref={this.v1}
-                        placeholder="0"
-                        defaultValue={this.state.v1}
-                        onBlur={(e) => this.focusOut(e, 1)}
-                    />
-                    <div>+</div>
-                    <input
-                        ref={this.v2}
-                        placeholder="1"
-                        defaultValue={this.state.v2}
-                        onBlur={(e) => this.focusOut(e, 2)}
-                    />
-                    <button
-                        onClick={(e) => {
-                            const res = this.props.graph.addEdge(this.v1.current.value, this.v2.current.value);
-                            //error
-                        }}
-                    >
-                        З'єднати
-                    </button>
-                </div>
-            )
-        }
-    }
-
-//=================================================================================
-//=================================================================================
-
-    const graph = ReactDOM.render(<Graph DOMElement = {{
-        'Nodes': 'node_container',
-        'Edges': 'edge_container'
-    }}/>, document.querySelector('#graph_container'));
-    const edgeBar = ReactDOM.render(<EdgeBar graph={graph}/>, document.querySelector('#edge_bar_container'));
-
-    document.onmousedown = (e) => {
-        if (e.altKey === true) graph.addNode([e.pageX - 27 / 2, e.pageY - 27 / 2]);
-    }
-    
-    document.ondblclick = (e) => {
-        if (e.target == document.body) graph.addNode([e.pageX - 27 / 2, e.pageY - 27 / 2]);
-    }
-</script>
+<style>body{margin:0 auto}.Node{position:absolute;z-index:1;top:0;left:0;height:27px;width:27px;border:0;border-radius:50%;line-height:2px;font-size:13px;font-family:monospace;color:#787878;background-color:#e6e6e6;outline:0;user-select:none;-ms-user-select:none;cursor:grab}.Edge{position:absolute;z-index:0;top:0;left:0;width:4px;background-color:#c8c8c8;transform-origin:0 0 0}#crosshairVert{position:absolute;z-index:0;top:0;background-color:#0ad296;width:1.6px;height:100%}#crosshairHorizontal{position:absolute;z-index:0;left:0;background-color:#0ad296;height:1.6px;width:100%}#edge_bar{position:absolute;z-index:2;width:120px;height:90px;box-sizing:border-box;padding-top:8px;border-radius:5px;background-color:rgba(180,180,180,.2);user-select:none;-ms-user-select:none;overflow:hidden;cursor:grab}#edge_bar input{float:left;width:34px;height:34px;margin-bottom:8px;border:solid .1px #fff;border-radius:50%;outline:0;text-align:center;font:16px/34px sans-serif;transition:border .25s ease-in-out;color:#787878;caret-color:#787878}#edge_bar input::selection{background-color:#787878;color:#fff}#edge_bar input:focus{border:solid 1.5px #b4b4b4}#edge_bar input::placeholder{color:#b4b4b4}#edge_bar input::-webkit-input-placeholder{color:#b4b4b4}#edge_bar input:nth-child(1){margin-left:10px}#edge_bar div{float:left;height:20px;width:20px;background-color:rgba(180,180,180,.5);margin:7px 6px;border-radius:50%;color:#fff;text-align:center;font:20px/20px serif;transform:rotate(0);transition:transform .1s ease-in-out,background-color .25s ease-in-out;cursor:pointer}#edge_bar div:active{transform:rotate(90deg)}#edge_bar div:hover{background-color:rgba(180,180,180,.7)}#edge_bar button{width:100%;height:40px;border:solid 2px #0ad296;background-color:#0ad296;transition:border .25s ease-in-out,background-color .25s ease-in-out;outline:0;font:15px/32px sans-serif;color:#fff;cursor:pointer}#edge_bar button:hover{border:solid 2px #0abe96;background-color:#0abe96}#paint_button button{position:absolute;z-index:2;width:120px;height:40px;border:0;border-radius:5px;background-color:#8c82d2;transition:background-color .25s ease-in-out;outline:0;font:15px/32px sans-serif;color:#fff;cursor:pointer!important;user-select:none}#paint_button button:hover{background-color:#8c6ed2}#copyright{z-index:-1;position:absolute;left:calc(50% - 50px);bottom:10px;color:#787878;height:20px;width:100px;text-align:center;font:12px/20px Arial;user-select:none;-ms-user-select:none}</style><meta charset="utf-8"/><link rel="icon" href="icon.min.png"/><title>Graph</title><div id="graph_container"></div><div id="edge_bar_container"></div><div id="paint_button"></div><div id="copyright">Graph &copy; Artem</div><script>!function(i){function e(e){for(var t,r,n=e[0],o=e[1],u=e[2],l=0,f=[];l<n.length;l++)r=n[l],Object.prototype.hasOwnProperty.call(p,r)&&p[r]&&f.push(p[r][0]),p[r]=0;for(t in o)Object.prototype.hasOwnProperty.call(o,t)&&(i[t]=o[t]);for(s&&s(e);f.length;)f.shift()();return c.push.apply(c,u||[]),a()}function a(){for(var e,t=0;t<c.length;t++){for(var r=c[t],n=!0,o=1;o<r.length;o++){var u=r[o];0!==p[u]&&(n=!1)}n&&(c.splice(t--,1),e=l(l.s=r[0]))}return e}var r={},p={1:0},c=[];function l(e){if(r[e])return r[e].exports;var t=r[e]={i:e,l:!1,exports:{}};return i[e].call(t.exports,t,t.exports,l),t.l=!0,t.exports}l.m=i,l.c=r,l.d=function(e,t,r){l.o(e,t)||Object.defineProperty(e,t,{enumerable:!0,get:r})},l.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},l.t=function(t,e){if(1&e&&(t=l(t)),8&e)return t;if(4&e&&"object"==typeof t&&t&&t.__esModule)return t;var r=Object.create(null);if(l.r(r),Object.defineProperty(r,"default",{enumerable:!0,value:t}),2&e&&"string"!=typeof t)for(var n in t)l.d(r,n,function(e){return t[e]}.bind(null,n));return r},l.n=function(e){var t=e&&e.__esModule?function(){return e.default}:function(){return e};return l.d(t,"a",t),t},l.o=function(e,t){return Object.prototype.hasOwnProperty.call(e,t)},l.p="/";var t=this.webpackJsonptest=this.webpackJsonptest||[],n=t.push.bind(t);t.push=e,t=t.slice();for(var o=0;o<t.length;o++)e(t[o]);var s=n;a()}([])</script><script src="./static/js/2.9dd58185.chunk.js"></script><script src="./static/js/main.6447987a.chunk.js"></script>
