--- a/check/index.html
+++ b/check/index.html
@@ -8,16 +8,30 @@
         <title lang="en">Cashier's Check</title>
     </head>
     <body>
-        <header>
-            <h1 lang="en">Cashier's Check</h1>
-            <p>...створений з натхненням <br/> для  простих цілей</p>
-        </header>
-        <main>
-            <button>увійти</button>
-        </main>
-        <footer>
-            <div arrow></div>
-        </footer>
+        <section main>
+            <header>
+                <h1 lang="en">Cashier's Check</h1>
+                <p>...створений з натхненням <br/> для  простих цілей</p>
+            </header>
+            <main>
+                <button onclick="document.body.setAttribute('login', '')">увійти</button>
+            </main>
+            <footer>
+                <div arrow></div>
+            </footer>
+        </section>
+        <section login>
+            <header>
+                <h1 visible>Авторизація</h1>
+            </header>
+            <main>
+                <form>
+                    <label for="invite-code">Код-запрошення</label><!--
+                    --><input type="text" id="invite-code" name="invite-code" placeholder="код-запрошення" maxlength="14" required>
+                    <input type="submit" value="Увійти">
+                </form>
+            </main>
+        </section>
     </body>
     <script src="main.js"></script>
 </html>
