button click area

--- a/check/index.html
+++ b/check/index.html
@@ -25,10 +25,13 @@
                 <h1 visible>Авторизація</h1>
             </header>
             <main>
-                <form>
+                <form login>
                     <label for="invite-code">Код-запрошення</label><!--
-                    --><input type="text" id="invite-code" name="invite-code" placeholder="код-запрошення" maxlength="14" required>
-                    <input type="submit" value="Увійти">
+                    --><input type="text" id="invite-code" name="invite-code" placeholder="код-запрошення" maxlength="10" required>
+                    <label for="submit">
+                        Submit
+                        <input type="submit" value="Увійти">
+                    </label>
                 </form>
             </main>
         </section>
