--- a/check/profile.html
+++ b/check/profile.html
@@ -8,6 +8,16 @@
         <title lang="en">Cashier's Check</title>
     </head>
     <body>
-        
+        <header>
+            <h1 data-visible>Сховище чеків</h1>
+        </header>
+        <main>
+            <button>переглянути</button>
+            <button>додати запис</button>
+        </main>
+        <!-- <footer>
+            <div data-circle></div>
+        </footer> -->
+        <script src="main.js"></script>
     </body>
 </html>
