--- a/check/profile.html
+++ b/check/profile.html
@@ -5,7 +5,7 @@
         <meta content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no" name="viewport">
         <link rel="stylesheet" href="default.css">
         <link rel="stylesheet" href="main.css">
-        <title lang="en">Cashier's Check</title>
+        <title lang="en">Sales Slip</title>
     </head>
     <body>
         <header>
@@ -18,6 +18,9 @@
         <!-- <footer>
             <div data-circle></div>
         </footer> -->
+        <footer>
+            <button onclick="logout()">Вийти</button>
+        </footer>
         <script src="main.js"></script>
     </body>
 </html>
