--- a/check/index.html
+++ b/check/index.html
@@ -40,7 +40,7 @@
         </section>
         <script>
             if (document.cookie.search('apikey') != -1)
-                document.location.pathname = '/profile.html'
+                document.location.href = 'profile.html'
         </script>
         <script src="main.js"></script>
     </body>
