--- a/check/index.html
+++ b/check/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no" name="viewport">
-        <link rel="stylesheet" href="default.css">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/default.css">
+        <link rel="stylesheet" href="css/main.css">
         <title lang="en">Sales Slip</title>
     </head>
     <body>
@@ -26,8 +26,20 @@
             </header>
             <main>
                 <form data-login name="login-form">
+                    <datalist id="products">
+                        <!-- <option value="Ahahah">shi?</option>
+                        <option value="A Classic Voda Litl 0.5"></option>
+                        <option value="aEdge">
+                        <option value="AFirefox">
+                        <option value="AChrome">
+                        <option value="aOpera">
+                        <option value="aSafari"> -->
+                        <option label="aVolvo" value="0123456789">asdsadsaa dasd asda dsadsd</option>
+                    </datalist>
                     <label for="invite-code">Код-запрошення</label><!--
-                    --><input type="text" id="invite-code" name="invite-code" placeholder="код-запрошення" maxlength="10" required>
+                    --><input type="text" id="invite-code" name="invite-code" 
+                        placeholder="код-запрошення" maxlength="10" list="products"
+                        autocomplete="off" spellcheck="off" required>
                     <label for="submit">
                         Submit
                         <input id="submit" type="submit" value="Увійти">
