--- a/check/profile.html
+++ b/check/profile.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width,height=device-height,initial-scale=1.0,minimum-scale=1.0,shrink-to-fit=no" name="viewport">
-        <link rel="stylesheet" href="default.css">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="css/default.css">
+        <link rel="stylesheet" href="css/main.css">
         <title lang="en">Sales Slip</title>
     </head>
     <body>
